# destine

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  install-prereqs.sh  pyproject.toml  requirements.dev.txt  requirements.test.txt
.github/workflows/: make-check.yml
destine/: __init__.py  util.py
test/: test_destine.py  test_destine_util.py
tests/: test_destine.py  test_destine_util.py
